--- a/src/Component/AddClinic.css
+++ b/src/Component/AddClinic.css
@@ -1,25 +1,51 @@
+/* AddClinic.css */
+
 .add-clinic-container {
-    margin: 20px;
-  }
-  
-  h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .form-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-  
-  .form-group {
-    flex: 1 1 300px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .search-button {
-    width: 100px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 300px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+.search-button {
+  width: 150px;
+  align-self: center;
+}
+
+/* Customize the appearance of the Dropdown component */
+.p-dropdown {
+  width: 100%;
+}
+
+/* Customize the appearance of the Checkbox component */
+.p-checkbox .p-checkbox-box {
+  width: 16px;
+  height: 16px;
+}
+
+.p-checkbox-label {
+  font-size: 14px;
+}
+
+/* Add additional styles as needed */
