--- a/src/Component/AddHospital.css
+++ b/src/Component/AddHospital.css
@@ -7,44 +7,44 @@
     padding: 20px;
   }
   
-  h1 {
+  .add-hospital-container h1 {
     font-size: 24px;
     margin-bottom: 20px;
   }
   
-  .form-container {
+  .add-hospital-container .form-container {
     display: flex;
     flex-direction: column;
     gap: 20px;
     width: 300px;
   }
   
-  .form-group {
+  .add-hospital-container .form-group {
     display: flex;
     flex-direction: column;
   }
   
-  h3 {
+  .add-hospital-container h3 {
     font-size: 16px;
   }
   
-  .search-button {
+  .add-hospital-container .search-button {
     width: 150px;
     align-self: center;
   }
   
   /* Customize the appearance of the Dropdown component */
-  .p-dropdown {
+  .add-hospital-container .p-dropdown {
     width: 100%;
   }
   
   /* Customize the appearance of the Checkbox component */
-  .p-checkbox .p-checkbox-box {
+  .add-hospital-container .p-checkbox .p-checkbox-box {
     width: 16px;
     height: 16px;
   }
   
-  .p-checkbox-label {
+  .add-hospital-container .p-checkbox-label {
     font-size: 14px;
   }
   
